<resources>
    <string name="app_name">AtwaterKentNav</string>

    <string name="https_www_wpi_edu_people_faculty_drb">https://www.wpi.edu/people/faculty/drb</string>
    <string name="_313">313</string>
    <string name="donald_brown">Donald Brown</string>
    <string name="stephen_bitar">Stephen Bitar</string>
    <string name="_312">312</string>
    <string name="url"><u>URL</u></string>
    <string name="room_number"><u>Room #</u></string>
    <string name="professor_name"><u>Professor Name</u></string>
    <string name="https_www_wpi_edu_people_faculty_sjbitar">https://www.wpi.edu/people/faculty/sjbitar</string>
    <string name="r_james_duckworth">R. James Duckworth</string>
    <string name="_301">301</string>
    <string name="https_www_wpi_edu_people_faculty_rjduck">https://www.wpi.edu/people/faculty/rjduck</string>
    <string name="berk_sunar">Berk Sunar</string>
    <string name="_302">302</string>
    <string name="https_www_wpi_edu_people_faculty_sunar">https://www.wpi.edu/people/faculty/sunar</string>
    <string name="xinming_huang">Xinming Huang</string>
    <string name="_303">303</string>
    <string name="https_www_wpi_edu_people_faculty_xhuang">https://www.wpi.edu/people/faculty/xhuang</string>
    <string name="edward_clancy">Edward Clancy</string>
    <string name="https_www_wpi_edu_people_faculty_ted">https://www.wpi.edu/people/faculty/ted</string>
    <string name="_304">304</string>
    <string name="https_www_wpi_edu_people_faculty_mcneill">https://www.wpi.edu/people/faculty/mcneill</string>
    <string name="_305">305</string>
    <string name="john_mcneill">John McNeill</string>
    <string name="_306">306</string>
    <string name="https_www_wpi_edu_people_faculty_makarov">https://www.wpi.edu/people/faculty/makarov</string>
    <string name="sergey_makarov">Sergey Makarov</string>
    <string name="_307">307</string>
    <string name="https_www_wpi_edu_people_faculty_teisenbarth">https://www.wpi.edu/people/faculty/teisenbarth</string>
    <string name="thomas_eisenbarth">Thomas Eisenbarth</string>
    <string name="_308">308</string>
    <string name="https_www_wpi_edu_people_faculty_kaveh">https://www.wpi.edu/people/faculty/kaveh</string>
    <string name="kaveh_pahlavan">Kaveh Pahlavan</string>
    <string name="https_www_wpi_edu_people_faculty_jrahman">https://www.wpi.edu/people/faculty/jrahman</string>
    <string name="jahangir_rahman">Jahangir Rahman</string>
    <string name="_309">309</string>
    <string name="_310">310</string>
    <string name="https_www_wpi_edu_people_faculty_srmazumder">https://www.wpi.edu/people/faculty/srmazumder</string>
    <string name="shamsur_mazumder">Shamsur Mazumder</string>
    <string name="_311">311</string>
    <string name="http_spinlab_wpi_edu">http://spinlab.wpi.edu/</string>
    <string name="faculty_conference_room">Faculty Conference \nRoom</string>
    <string name="_314">314</string>
    <string name="signal_processing_and_ninformation_networking_nlaboratory_spinlab">Signal Processing &amp; \nInformation Networking \nLaboratory (SPINLab)</string>
</resources>
